--- a/problem_23/Cargo.toml
+++ b/problem_23/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "project-euler"
+name = "problem_23"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.12.0"
+rayon = "1.8.0"
 
-[workspace]
-members = [
-  "problem_23",
-  "problem_29"
-]
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "benchmarks"
+harness = false
