--- a/problem_37/Cargo.toml
+++ b/problem_37/Cargo.toml
@@ -1,16 +1,8 @@
 [package]
-name = "project-euler"
+name = "problem_37"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[workspace]
-members = [
-  "problem_23",
-  "problem_29",
-  "problem_30",
-  "problem_37",
-]
