--- a/problem_14/Cargo.toml
+++ b/problem_14/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "common"
+name = "problem_14"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num = "0.4.1"
+
+[dev-dependencies]
+test-case = "3.3.1"
